--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -2,3 +2,34 @@
     font: 50;
     text-align: center;
 }
+
+.navbar{
+    text-align: center;
+}
+.about-me-brief{
+    text-align: center;
+}
+/*
+LOHA
+*/
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    color: black;
+}
+
+a:hover {
+    color:aqua;  
+}
+
+li {
+    display: inline;
+    padding: 5px;
+}
+
+a{
+    font-size: 25px;
+}
+
