--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -27,7 +27,7 @@ body{
 }
 
 .header-title {
-    font-size: 65;
+    font-size: 30px;
     text-align: center;
     display: block;
     padding: 15% 0;
